Fix todo's in foundations.tex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -301,7 +301,7 @@
 
 @article{halpernleistner2016autoequivalences,
     shorthand = {HLS16},
-    title={Autoequivalences of derived categories via geometric invariant theory}, 
+    title={Autoequivalences of derived categories via geometric invariant theory},
     author = {Halpern-Leistner, Daniel and Shipman, Ian},
     journal = {Adv. Math.},
     volume = {303},
@@ -326,7 +326,7 @@
 
 @misc{ballard2014variation,
       shorthand={BFK14},
-      title={Variation of geometric invariant theory quotients and derived categories}, 
+      title={Variation of geometric invariant theory quotients and derived categories},
       author={Matthew Ballard and David Favero and Ludmil Katzarkov},
       year={2014},
       eprint={1203.6643},
@@ -336,7 +336,7 @@
 
 @misc{halpernleistner2014derived,
       shorthand={Halp14},
-      title={The derived category of a GIT quotient}, 
+      title={The derived category of a GIT quotient},
       author={Daniel Halpern-Leistner},
       year={2014},
       eprint={1203.0276},
@@ -346,7 +346,7 @@
 
 @misc{donovan2017perverse,
 shorthand = {Don17},
-      title={Perverse schobers and wall crossing}, 
+      title={Perverse schobers and wall crossing},
       author={W. Donovan},
       year={2017},
       eprint={1703.00592},
@@ -356,7 +356,7 @@ shorthand = {Don17},
 
 @misc{Beilinson1978,
       shorthand={Beil78},
-      title={Coherent sheaves on Pn and problems of linear algebra}, 
+      title={Coherent sheaves on Pn and problems of linear algebra},
       author={Beilinson, A. A.},
       year={1978},
    url={https://doi.org/10.1007/BF01681436},
@@ -420,4 +420,14 @@ shorthand = {Don17},
 	year = {1995},
 	note = {arXiv:alg-geom/9506012},
 	keywords = {Mathematics - Algebraic Geometry},
+}
+
+@misc{chang2023braid,
+      shorthand={CHS23},
+      title={Braid group actions on branched coverings and full exceptional sequences},
+      author={Wen Chang and Fabian Haiden and Sibylle Schroll},
+      year={2023},
+      eprint={2301.04398},
+      archivePrefix={arXiv},
+      primaryClass={math.RT}
 }
