--- a/commands.tex
+++ b/commands.tex
@@ -92,12 +92,13 @@
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Proj}{Proj}
 \DeclareMathOperator{\Bl}{Bl}
+\DeclareMathOperator{\Ch}{Ch}
 \DeclareMathOperator{\Pic}{Pic}
 \DeclareMathOperator{\Coh}{Coh}
 \DeclareMathOperator{\QCoh}{QCoh}
 \DeclareMathOperator{\Perf}{Perf}
 \DeclareMathOperator{\DPerf}{\mathfrak{Perf}}
-\newcommand{\MF}{\mathrm{MF}}
+\DeclareMathOperator{\MF}{MF}
 \newcommand{\Ab}{\mathrm{Ab}}
 
 % letters
